<resources>
    <string name="app_name">Alexa Mart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_alexa_mart">Welcome To Alexa Mart</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_to_alexa_mart">Login to Alexa Mart</string>
    <string name="user_email">user email</string>
    <string name="user_password">user password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register_to_alexa_mart">Register to Alexa Mart</string>
    <string name="user_name">user name</string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="admin">Admin</string>
    <string name="errorMessage">errorMessage</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="product">Product</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="report">Report</string>
    <string name="menu">Menu</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_amount">Product Amount</string>
    <string name="upload_product">Upload Product</string>
</resources>