<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_three_dots"
        android:title="@string/menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/report"
                android:icon="@drawable/ic_report"
                android:title="@string/report" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

        </menu>
    </item>

</menu>