<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.login.LoginFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/login_to_alexa_mart"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="#E64A4A"
        android:textSize="@dimen/_28sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        android:hint="@string/user_email"
        app:endIconMode="clear_text"
        app:helperText="Required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#FB0101"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:hint="@string/user_password"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperText="Required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#FB0101"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textWebPassword"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgetPasswordTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_34sdp"
        android:text="@string/forget_password"
        android:textColor="#079BE0" />

    <Button
        android:id="@+id/btnLogin"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:backgroundTint="#FF304F"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:strokeColor="#FA0505"
        app:strokeWidth="@dimen/_2sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FF304F"
        android:textSize="@dimen/_12sdp" />

    <Button
        android:id="@+id/btnRegister"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:strokeColor="#801C1C"
        app:strokeWidth="@dimen/_2sdp" />


</LinearLayout>